Fix: Design not properly responsive on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,108 +4,182 @@ body,html{
     background-color: #F7FFF7;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.columns{
-    display: flex;
-    width: min(1200px,100vw);
-    margin: 0 auto;
-    height: 100vh;
-}
 .col1{
-    flex:1;
-    display: flex;
-    height: 100vh;
-    flex-direction: column;
-    background-color: red;
     background-image: url(/images/background.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
-.logo{
+.col1 img{
+    filter: invert(100%);
+}   
+.credits, .credits a{
+    color: white;
     display: flex;
-    color: white;
-    position: relative;
-    top: 20vh;
-    height: 12vh;
-    width: 100%;
-    background-color: rgb(255,255,255, 0.9);
-    align-items: center;
     justify-content: center;
-}
-.logo img{
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-}
-.credits{
-    font-size: 0.75rem;
-    color: white;
-    padding: 2rem;
-    text-align: center;
     margin-top: auto;
-}
-.credits a{
-    color: white;
+    padding-bottom: 0.3rem;
 }
 .col2{
-    flex:3;
-    display: flex;
-    flex-direction: column;
-    background-color: lightgrey;
-    justify-content: center;
-}
-.col2 h2, .col2 p{
-    padding-left: 2rem;
-    padding-right: 9rem;
+        background-color: lightgrey;
+        flex-grow: 1;
 }
 .col2 button{
-    display: flex;
-    padding: 1rem;
-    margin: 2rem 0rem 0rem 2rem;
-    width: 250px;
-    justify-content: center;
-    background-color: darkslategray;
-    color: white;
-    border-radius: 5px;
-    border: 0;
+        background-color: darkslategray;
+        color: white;
+        border-radius: 5px;
+        border: 0;
 }
-.formwrapper{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    background-color: white;
-    padding: 2rem;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
+legend{
+    font-weight: 600;
 }
-fieldset{
-    display: flex;
-    padding: 0;
-    border: 0;
-    margin: 0;
-    width: 80%;
-    height: 250px;
-    flex-direction: column;
-    flex-wrap: wrap;
+p a{
+    font-weight: 600;
+    text-decoration: none;
+    color: darkslategray;
 }
-input, label, legend{
-    margin-bottom: 0.25rem;
-    height: 32px;
-    padding-left: 5px;
-    width: min(25vw, 15rem);
-    margin-right: 2rem;
-}
-@media screen and (max-width:768px) {
-    .columns {
+@media screen and (max-width: 768px) {
+    .columns{
         display: flex;
+        flex-direction: column;
+        height: 100vh;
+    }
+    .col1{
+        display: flex;
+        flex: 0.2;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .logo{
+        display: flex;
+        padding: 0;
+        margin: 0 ;
+        justify-content: center;
+    }
+    .logo img{
+        width: 70%;
+    }
+    .credits{
+        font-size: 0.75rem;
+    }
+    .col2 h2, .col2 p{
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+    .formwrapper{
+        background-color: white;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        margin-bottom: 1rem;
+    }
+    fieldset{
+        display: flex;
+        flex-direction: column;
+        border: 0;
+        line-height: 2rem;
+    }
+    legend{
+        padding-left: 1rem;
+    }
+    input{
+        line-height: 2rem;
+        padding-left: 8px;
+        border-radius: 5px;
+        border: 1px solid lightgrey;
+    }
+    .col2{
+        display: flex;
+        flex-direction: column;
+    }
+    .col2 button{
+        display: flex;
+        justify-content: center;
+        padding: 1rem;
+        background-color: darkslategray;
+        color: white;
+        border-radius: 5px;
+        margin: 1rem;
+        border: 0;
+    }
+    .col2 p{
+        display: flex;
+        justify-content: center;
+    }
+}
+@media screen and (min-width: 769px){
+    .columns{
+        display: flex;
+        width: min(1200px,100vw);
+        margin: 0 auto;
+        height: 100vh;
+    }
+    .col1{
+        flex:1;
+        display: flex;
+        height: 100vh;
         flex-direction: column;
     }
     .logo{
         display: flex;
+        color: white;
+        position: relative;
+        top: 20vh;
+        height: 12vh;
+        width: 100%;
+        background-color: rgba(41, 41, 41, 0.9);
+        align-items: center;
+        justify-content: center;
+    }
+    .logo img{
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+    }
+    .col2{
+        flex:3;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .col2 h2, .col2 p{
+        padding-left: 2rem;
+        padding-right: 9rem;
+    }
+    .col2 button{
+        display: flex;
+        padding: 1rem;
+        margin: 2rem 0rem 0rem 2rem;
+        width: 250px;
+        justify-content: center;
+      
+    }
+    .formwrapper{
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 2rem;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
     }
     fieldset{
-        width: 100%;
-        flex-wrap: nowrap;
-        justify-content: center ;
+        display: flex;
+        padding: 0;
+        border: 0;
+        margin: 0;
+        width: 80%;
+        height: 250px;
+        flex-direction: column;
+        flex-wrap: wrap;
     }
- 
+    input, label, legend{
+        margin-bottom: 0.25rem;
+        height: 32px;
+        padding-left: 0px;
+        width: min(25vw, 15rem);
+        margin-right: 2rem;
+    }
+    input{
+        padding-left: 8px;
+    }
 }
